# SummaRAG

./: .gitignore  README.md
Main/: .env.example  RAG.py  WRITEPINECODE.py  backbone.py  cleaning.py  config.yaml  data_extractor.py  db_handler.py  embedding_type.py  main.py  metrics.py  pinecodedb.py  prepare_file.py  preprocessor.py  pyproject.toml  pyproject_cpu.toml  pyproject_gpu.toml  retriever.py  summarize.py  summarizer.py
Main/Langchain/: assistant.py  document_loader.py  pinecone.py
Main/ainewscraper/: getPosts.py  scrapy.cfg
Main/ainewscraper/ainewscraper/: items.py  settings.py
Main/ainewscraper/ainewscraper/spiders/: alignment.py
scraper/: pyproject.toml
scraper/ainewscraper/: posts.json
scraper/ainewscraper/ainewscraper/: middlewares.py  pipelines.py
